fix exception handlers for actors